test/libsolidity/syntaxTests/parsing/payable_accessor.sol
contract test {
	uint payable x;
}
// ----
// TypeError: (17-31): State mutability can only be specified for address types.
